複数の支払者の修正

--- a/app/templates/app/cost_form.html
+++ b/app/templates/app/cost_form.html
@@ -30,12 +30,12 @@
         <div id="payers-form-container">
             <div class="form-group" id="payer-group" style="display: none;"> <!-- 初めから非表示 -->
                 <label for="id_cost_payers">支払者</label>
-                {{ cost_form.cost_payers }}
+                {{ payment_form.payment_payers }}
             </div>
         
             <div class="form-group" id="money-group" style="display: none;"> <!-- 初めから非表示 -->
                 <label for="id_cost_money">費用</label>
-                {{ cost_form.cost_money }}
+                {{ payment_form.payment_money }}
             </div>
         </div>
 
