--- a/app/templates/app/signup.html
+++ b/app/templates/app/signup.html
@@ -33,6 +33,10 @@
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
+                    <label for="phone_number">電話番号</label>
+                    <input type="text" class="form-control" id="phone_number" name="phone_number" required placeholder="090-1234-5678">
+                </div>
+                <div class="form-group">
                     <label for="password">パスワード</label>
                     <input type="password" class="form-control" id="password1" name="password1" required>
                 </div>
