--- a/app/templates/app/signup.html
+++ b/app/templates/app/signup.html
@@ -33,8 +33,8 @@
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <label for="phone_number">電話番号</label>
-                    <input type="text" class="form-control" id="phone_number" name="phone_number" required placeholder="090-1234-5678">
+                    <label for="phone">電話番号</label>
+                    <input type="text" class="form-control" id="phone" name="phone" required placeholder="090-1234-5678">
                 </div>
                 <div class="form-group">
                     <label for="password">パスワード</label>
