カレンダー以外はおk

--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -170,6 +170,7 @@
     <!-- これからの旅行セクション -->
     <section class="upcoming-section">
         <h2 class="section-title">これからの旅行</h2>
+        <a href="{% url 'calendar' %}" class="calendar">カレンダー</a>
         <ul class="plan-list">
             <!-- 新規作成ボタン -->
             <a href="{% url 'create_plan' %}" class="create-plan">
