--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -171,6 +171,7 @@
     <section class="upcoming-section">
         <h2 class="section-title">これからの旅行</h2>
         <a href="{% url 'logout' %}" class="btn btn-outline-danger">ログアウト</a>
+        <a href="{% url 'checklist' %}" class="btn btn-outline-danger">チェックリスト</a>
         <ul class="plan-list">
             <!-- 新規作成ボタン -->
             <a href="{% url 'create_plan' %}" class="create-plan">
