--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -12,19 +12,20 @@
         <div class="col-md-4 mt-5"> <!-- mt-5 でフォーム全体を下に下げる -->
             <h1 class="text-center mb-4">ホーム</h1>
             <!-- 申請ボタン -->
-            {% if application %}
+            {% if user_application %}
                 <div class="d-flex justify-content-between">
                     <button class="btn btn-secondary" disabled>申請済み</button>
-                    <form action="{% url 'cancel_application' application.id %}" method="POST" onsubmit="return confirm('本当にこの申請をキャンセルしますか？');">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-danger">キャンセル</button>
-                    </form>
+            
                 </div>
             {% else %}
                 <a href="{% url 'application' %}" class="btn btn-primary">申請する</a>
             {% endif %}
             <!-- ログアウトボタン -->
             <a href="{% url 'logout' %}" class="btn btn-outline-danger">ログアウト</a>
+        </div>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
