--- a/app/templates/app/application_form.html
+++ b/app/templates/app/application_form.html
@@ -15,7 +15,7 @@
         <div class="alert alert-success">{{ message }}</div>
         {% endfor %}
         {% endif %}
-        <form action="{% url 'add_spot' %}" method="POST">
+        <form action="{% url 'add_spot' applicant_id=applicant_id %}" method="POST">
             {% csrf_token %}
         
         <!-- スポット名 -->
