--- a/app/templates/app/password_reset_confirm.html
+++ b/app/templates/app/password_reset_confirm.html
@@ -15,14 +15,14 @@
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="new_password">新しいパスワード</label>
-                    <input type="password" class="form-control" id="new_password" name="new_password1" required>
+                    <input type="password" class="form-control" id="new_password" name="new_password" required>
                 </div>
                 <div class="form-group">
                     <label for="new_password_confirm">新しいパスワード（確認用）</label>
-                    <input type="password" class="form-control" id="new_password_confirm" name="new_password2" required>
+                    <input type="password" class="form-control" id="new_password_confirm" name="new_password_confirm" required>
                 </div>
                 <button type="submit" class="btn btn-primary btn-block">パスワードを変更する</button>
-            </form>
+            </form>            
             <div class="text-center mt-3">
                 <a href="{% url 'login' %}">ログインに戻る</a>
             </div>
