--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -163,9 +163,65 @@
             width: 100%; /* 幅を100%に設定 */
             text-align: left; /* 左寄せ */
         }
+        .app-name {
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .top-row {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items:center;
+            padding:10px 20px;
+        }
+
+        .nav-links {
+            display:flex;
+            gap:10px ;
+            margin-left:auto;
+        }
+
+        .tabs-row {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            border: 1px solid #000;
+            justify-content: space-between;
+        }
+
+        .tab {
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            width: 100%; 
+            padding: 10px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            font-size: 18px;
+            text-align: center;
+        }
+
+        .btn {
+            border-radius: 5px;
+            padding: 10px 20px;
+            text-decoration: none;
+            font-size: 16px;
+        }
     </style>
 </head>
 <body>
+    <div class="top-row">
+        <div class="app-name">NoteTrip</div>
+        <div class ="nav-links"></div>
+            <a href="{% url 'home' %}" class="btn">ホーム</a>
+            <a href="#" class="btn">カレンダー</a>
+            <a href="#" class="btn">マイページ</a>
+        </div>
+    </div>
     
     <!-- これからの旅行セクション -->
     <section class="upcoming-section">
