--- a/app/templates/app/plan_detail.html
+++ b/app/templates/app/plan_detail.html
@@ -47,11 +47,77 @@
         .back-link:hover {
             background-color: #0056b3;
         }
+        .navbar {
+            display: flex;
+            flex-direction: column; 
+            align-items: center;
+            padding: 10px 20px;
+            gap: 10px; 
+        }
+
+        .app-name {
+            font-size: 20px;
+            font-weight: bold;
+        }
+
+        .top-row {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items:center;
+            padding:10px 20px;
+        }
+
+        .nav-links {
+            display:flex;
+            gap:10px ;
+            margin-left:auto;
+        }
+
+        .tabs-row {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            border: 1px solid #000;
+            justify-content: space-between;
+        }
+
+        .tab {
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            width: 100%; 
+            padding: 10px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+            font-size: 18px;
+            text-align: center;
+        }
+
+        .btn {
+            border-radius: 5px;
+            padding: 10px 20px;
+            text-decoration: none;
+            font-size: 16px;
+        }
     </style>
 </head>
 <body>
     <h1>{{ plan.title }}</h1>
-    <a href="{% url 'schedule' %}" class="btn btn-outline-danger">スケジュール</a>
+    <header>
+        <nav class="navbar">
+            <div class="tabs-row">
+                <a href="{% url 'plan_detail' plan.id %}" class="tab">しおり詳細</a>
+                <a href="{% url 'schedule' %}" class="tab">スケジュール</a>
+                <a href="{% url 'checklist' %}" class="tab">チェックリスト</a>
+                <a href="#" class="tab">マップ</a>
+                <a href="#" class="tab">費用</a>
+            </div>
+        </nav>
+    </header>
     
     <div class="plan-details">
         
