--- a/app/templates/app/schedule_edit.html
+++ b/app/templates/app/schedule_edit.html
@@ -14,6 +14,6 @@
         {{ form.as_p }}
         <button type="submit">保存</button>
     </form>
-    <a href="{% url 'schedule' %}">戻る</a>
+    <a href="{% url 'schedule' plan.id %}">戻る</a>
 </body>
 </html>
