--- a/app/templates/app/add_item.html
+++ b/app/templates/app/add_item.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <title>アイテムを追加</title>
-</head>
-<body>
-    <h1>アイテムを追加</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">追加</button>
-    </form>
-    <a href="{% url 'checklist' %}">チェックリストに戻る</a>
-</body>
-</html>
+{% extends "base/base.html" %}
+{% load static %}
+   
+{% block body %}
+<h1>アイテムを追加</h1>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">追加</button>
+</form>
+<a href="{% url 'checklist' plan.id %}">チェックリストに戻る</a>
+{% endblock %}
