--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -29,6 +29,11 @@
             border-radius: 50%;
             overflow: hidden;
         }
+
+        .photo-wrapper:hover{
+
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+        }
         
         /* 写真内部の画像 */
         .circular-photo {
@@ -103,6 +108,104 @@
         .nav-links:last-child {
             margin-left: 120px; /* 写真に近づける */
         }
+
+        .plan-container {
+        margin: 100px 50px;
+        }
+
+        
+        @keyframes bugfix {
+  from {
+    padding: 0;
+  }  to {
+    padding: 0;
+  }
+}@-webkit-keyframes bugfix {
+  from {
+    padding: 0;
+  }  to {
+    padding: 0;
+  }
+}#overlay-button {
+  position: absolute;
+  right: 2em;
+  top: 2.5em;
+  padding: 26px 11px;
+  z-index: 5;
+  cursor: pointer;
+  user-select: none;
+}#overlay-button span {
+  height: 4px;
+  width: 35px;
+  border-radius: 2px;
+  background-color: black;
+  position: relative;
+  display: block;
+  transition: all .2s ease-in-out;
+}#overlay-button span:before {
+  top: -10px;
+  visibility: visible;
+}#overlay-button span:after {
+  top: 10px;
+}#overlay-button span:before, #overlay-button span:after {
+  height: 4px;
+  width: 35px;
+  border-radius: 2px;
+  background-color: black;
+  position: absolute;
+  content: "";
+  transition: all .2s ease-in-out;
+}#overlay-button:hover span, #overlay-button:hover span:before, #overlay-button:hover span:after {
+  background: #707070;/*ハンバーガーメニューを押したときの色*/
+}
+input[type=checkbox] {
+  display: none; 
+  }input[type=checkbox]:checked ~ #overlay {
+  visibility: visible; 
+}
+input[type=checkbox]:checked ~ #overlay-button:hover span, input[type=checkbox]:checked ~ #overlay-button span {
+  background: transparent;
+    }input[type=checkbox]:checked ~ #overlay-button span:before {
+  transform: rotate(45deg) translate(7px, 7px);
+
+}input[type=checkbox]:checked ~ #overlay-button span:after {
+  transform: rotate(-45deg) translate(7px, -7px);
+
+
+}
+#overlay {
+  height: 100vh;
+  width: 30vw;
+  background: #dcdcdc;/*タブを開いた時の背景*/
+  z-index: 2;
+  visibility: hidden;
+  position: fixed;
+  top: 0; /* 上から固定 */
+  right: 0; /* 右側に固定 */
+}#overlay.active {
+
+}#overlay ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  height: 100vh;
+  padding-left: 0;
+  list-style-type: none;
+}
+#overlay ul li {
+  padding: 1em;
+}
+#overlay ul li a {
+  color: #000000;
+  text-decoration: none;
+  font-size: 1.5em;
+}
+#overlay ul li a:hover {
+  color: #f5f5f5!important;
+}
+
     </style>
 </head>
 <body>
@@ -126,6 +229,21 @@
                 <a href="#" class="tab4">マップ</a>
             </div>
         </nav>
+        
+        
+        <input type="checkbox" id="overlay-input" />
+        <label for="overlay-input" id="overlay-button">
+            <span></span>
+        </label>
+        <div id="overlay">
+            <ul>
+                <li><a href="{% url 'home' %}">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+         
+
     </header>
     {% block body %}
     {% endblock %}
