--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -97,9 +97,21 @@
         }
         
         .tab1:hover {
-            color: #FFD59E; /* ホバー時の色 */
+            color: #969595; /* ホバー時の色 */
         }
         
+        .tab2:hover {
+            color: #969595; /* ホバー時の色 */
+        }
+
+        .tab3:hover {
+            color: #969595; /* ホバー時の色 */
+        }
+
+        .tab4:hover {
+            color: #969595; /* ホバー時の色 */
+        }
+
         /* ヘッダー左右エリアを中央に寄せる */
         .nav-links:first-child {
             margin-right: 120px; /* 写真に近づける */
