--- a/app/static/app/css/schedule.css
+++ b/app/static/app/css/schedule.css
@@ -4,13 +4,13 @@ body {
 
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
+    border: 1px solid #ffffff;
     background-color: #f1f1f1;
     display: flex;
 }
 
 .tab button {
-    background-color: inherit;
+    background-color: white;
     border: none;
     outline: none;
     cursor: pointer;
@@ -20,22 +20,22 @@ body {
 }
 
 .tab button:hover {
-    background-color: #ddd;
+    background-color: white;
 }
 
 .tab button.active {
-    background-color: #ccc;
+    background-color: white;
 }
 
 .tab button.add-tab {
-    background-color: #4CAF50;
+    background-color: #ffffff;
     color: white;
 }
 
 .tabcontent {
     display: none; /* 初期状態では非表示 */
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #ffffff;
     border-top: none; /* タブとコンテンツの間に隙間ができないようにする */
     position: relative; /* 削除ボタンを配置するために相対位置を指定 */
 }
@@ -54,4 +54,8 @@ body {
 
 .close-tab-btn:hover {
     background-color: darkred;
+}
+
+.schedule {
+    margin-top: 120px;    
 }
