--- a/app/templates/app/plan_detail.html
+++ b/app/templates/app/plan_detail.html
@@ -2,23 +2,25 @@
 {% load static %}
    
 {% block body %}
-<div class="plan-details">
-    <div class="plan-container">
-        <!-- 画像部分 -->
-        <div class="plan-image-container">
-            <img src="{% if plan.image %}{{ plan.image.url }}{% else %}{% static 'app/images/muzi.jpg' %}{% endif %}" alt="旅行プランの画像" class="plan-image">
-        </div>
+<body>
+    <div class="plan-details">
+        <div class="plan-container">
+            <!-- 画像部分 -->
+            <div class="plan-image-container">
+                <img src="{% if plan.image %}{{ plan.image.url }}{% else %}{% static 'app/images/muzi.jpg' %}{% endif %}" alt="旅行プランの画像" class="plan-image">
+            </div>
 
-        <!-- テキスト部分 -->
-        <div class="plan-info">
-            <h2>{{ plan.title }}</h2>
-            <p><strong>出発日:</strong> {{ plan.start_dt|date:"Y年m月d日" }}</p> <!-- 出発日 -->
-            <p><strong>帰還日:</strong> {{ plan.end_dt|date:"Y年m月d日" }}</p> <!-- 帰還日 -->
-            <p><strong>詳細:</strong> {{ plan.description }}</p>
-            <a href="{% url 'member' plan.id %}" class="back-link">メンバー招待</a>
+            <!-- テキスト部分 -->
+            <div class="plan-info">
+                <h2>{{ plan.title }}</h2>
+                <p><strong>出発日:</strong> {{ plan.start_dt|date:"Y年m月d日" }}</p> <!-- 出発日 -->
+                <p><strong>帰還日:</strong> {{ plan.end_dt|date:"Y年m月d日" }}</p> <!-- 帰還日 -->
+                <p><strong>詳細:</strong> {{ plan.description }}</p>
+                <a href="{% url 'member' plan.id %}" class="back-link">メンバー招待</a>
+            </div>
         </div>
     </div>
-</div>
+</body>
 
 <style>
     .plan-details {
@@ -75,5 +77,7 @@
     .back-link:hover {
         color: #FFD59E; /* ホバー時の色 */
     }
+
+    
 </style>
 {% endblock %}
