--- a/app/templates/app/schedule_detail.html
+++ b/app/templates/app/schedule_detail.html
@@ -17,5 +17,5 @@
     {% csrf_token %}
     <button type="submit">削除</button>
 </form>
-<a href="{% url 'schedule' plan.id %}">一覧に戻る</a>
+<a href="{% url 'schedule' plan.id|default:1 %}">一覧に戻る</a>
 {% endblock %}
