--- a/app/templates/app/schedule_edit.html
+++ b/app/templates/app/schedule_edit.html
@@ -12,5 +12,5 @@
     {{ form.as_p }}
     <button type="submit">保存</button>
 </form>
-<a href="{% url 'schedule' plan.id %}">戻る</a>
+<a href="{% url 'schedule' plan.id|default:1 %}">戻る</a>
 {% endblock %}
